# foss-directory

./: Dockerfile  Makefile  Procfile  circus.ini  cronjob.py  monthly.sh  noxfile.py  pyproject.toml  readme.md  refresh-data.sh  ruff.toml  setup.cfg  wsgi.py
config/: rome_keep.txt
migrations/: env.py
migrations/versions/: 2f9324399ddd_.py  32e46bca4ca2_.py  4b6e170b33c6_.py  5026b4edb4a3_.py  5a7f46342d1f_.py  60be936e0b88_.py  6fdd57594d44_.py  b71bd66deabe_.py  c7a1dbdd261c_.py  caf3d80bac61_.py  e195da700210_.py  f18d56f524e7_.py  f19416b1bb81_.py  f378fbcfa222_.py
src/app/: config.py  debugging.py  extensions.py  main.py  nav.py  util.py
src/app/admin/: views.py
src/app/blueprints/public/: __init__.py  api.py  feeds.py  reports.py  sandbox.py
src/app/blueprints/public/templates/: sandbox.j2
src/app/blueprints/public/templates/reports/: index.html.j2
src/app/blueprints_old/admin_api/: __init__.py  others.py  societes.py  solutions.py
src/app/blueprints_old/api/: __init__.py  other.py  pages.py  societe.py  societes.py  solutions.py
src/app/cli/: __init__.py
src/app/jobs/: afs.py  cdl.py  cleanup.py  crawl.py  dump.py  fix.py  import.py  infogreffe.py  metadata.py  nlp.py  nlp_spacy.py  nlp_textrazor.py  poleemploi.py  prepare.py  screenshots.py  sill.py  sirene.py  solutions.py  util.py  wikidata.py
src/app/jobs/old/: airtable.py
src/app/lib/: __init__.py  scanner.py
src/app/macros/: icon.py
src/app/meld/components/: search.py
src/app/meld/templates/: search.html
src/app/models/: __init__.py  cluster.py  corpologia.py  societe.py  solution.py  util.py  web.py
src/app/old-pages/: _common.py  clusters.py  home.py  pages.py  regions.py  societe.py  solutions.py  villes.py
src/app/pages/: _common.py  index.py
src/app/pages/clusters/: detail.py  index.py
src/app/pages/faq/: index.py
src/app/pages/regions/: detail.py  index.py
src/app/pages/societes/: detail.py
src/app/pages/solutions/: detail.py  index.py
src/app/pages/villes/: detail.py  index.py
src/app/services/: config.py  register.py  screenshots.py  web.py
src/app/templates/layout/: _footer.j2  _header.j2  _layout.j2
src/app/templates/macros/: _card_societe.j2
src/app/templates/pages/: cluster.j2  clusters.j2  home--list.j2  home.j2  page.j2  region.j2  regions.j2  societe.j2  solution.j2  solutions.j2  villes.j2
src/app/templates/zzOLD/: _layout.j2  _societe.j2
tailwind/: package-lock.json  package.json  tailwind.config.js
tailwind/src/: styles.css
tests/: conftest.py  test_app.py  test_db.py  test_web.py
tests/e2e/: test_home.py
tests/features/: environment.py  main-nav.feature
tests/features/steps/: steps.py
